--- a/README.md.html
+++ b/README.md.html
@@ -20,7 +20,7 @@ I wirte this demo just because  I  see the demonstration of daimajia's NumberPro
 <h3>Demo renderings</h3>
 
 <p><img src="https://github.com/hulixia1992/NumberProgressBar/blob/master/gif/demo.gif?raw=true" alt="" title="" />
-Because of record,the picture looks a little jitter.</p>
+<br/>Because of record,the picture looks a little jitter.</p>
 <script type='text/javascript'>
 $(document).ready(function(){
   if($('code').length>0){
